# aetherproof

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  examples_demo.py  pyproject.toml
aetherproof/: __init__.py  cli.py
aetherproof/core/: __init__.py  hash.py  keystore.py  log.py  receipt.py  signer.py  verifier.py
aetherproof/ui/: __init__.py  display.py  easy_mode.py  expert_mode.py  menus.py
docs/: CLAIMS.md  DEMO.md  agent-chain-context-response.md
tests/: conftest.py  test_log.py  test_receipt.py  test_verifier.py
tests/security/: README.md  test_cli_contract.py  test_cloud_api_attested.py  test_cloud_models_matrix.py  test_parsing_and_types.py  test_preimage_injectivity.py  test_v12_extensions.py
